tests/functional/lang/eval-fail-dupAttr.err.exp
error: attribute 'a' already defined at /pwd/lang/eval-fail-dupAttr.nix:1:3
       at /pwd/lang/eval-fail-dupAttr.nix:1:10:
            1| { a = 1; a.b = 1; }
             |          ^
            2|
